--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,6 +3,9 @@
   apt:
     name: redis-server
     state: installed
+  tags:
+    - redis
+    - packages
 
 - name: Ensure Redis is configured.
   template:
@@ -10,9 +13,13 @@
     dest: "{{ redis_conf_path }}"
     mode: 0644
   notify: restart redis
+  tags:
+    - redis
 
 - name: Ensure redis is running and enabled on boot.
   service:
     name: "{{ redis_daemon }}"
     enabled: yes
     state: started
+  tags:
+    - redis
