--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -11,7 +11,7 @@
   template:
     src: redis.conf.j2
     dest: "{{ redis_conf_path }}"
-    mode: 0644
+    mode: "644"
   notify: restart redis
   tags:
     - redis
