replace "state: installed" with "state: present"

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: Redis is installed.
   apt:
     name: redis-server
-    state: installed
+    state: present
   tags:
   - redis
   - packages
