--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -24,4 +24,10 @@
   tags:
   - redis
 
+- name: Is Munin installed
+  stat:
+    path: /etc/munin/plugins
+  register: _munin_installed
+
 - include: munin.yml
+  when: _munin_installed.stat.exists && _munin_installed.stat.isdir
